[package]
name = "venturemmo"
version = "0.1.0"
authors = ["kirinokirino <kirinokirino@lunariko.com>"]
edition = "2021"
description = "A game."
repository = "https://github.com/kirinokirino/TODO"
documentation = ""
homepage = ""
readme = "README.md"
license = "MY"
keywords = ["game"]
categories = ["games"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

macroquad = { version = "0.3.13", default-features = false } #, features = ["audio", "log-rs"] }
simple-simplex = "1.0"
once_cell = "1.9"
indexmap = "1.8"

# Optional: Uncommenting the following improves compile times, but reduces the amount of debug info to 'line number tables only'
# In most cases the gains are negligible, but if you are on macos and have slow compile times you should see significant gains.
[profile.dev]
#debug = 1

[profile.dev.package."*"]
opt-level=3
